# demo-project

./: CMakeLists.txt  Readme.md
lib/: func.cpp
src/: main.cpp
